--- a/templates/login.html
+++ b/templates/login.html
@@ -43,32 +43,16 @@
                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
 </svg>
-                <a href = "/radio" style="color: white;text-decoration: none;">Tests</a>
+                <a href = "/radio" style="color: white;text-decoration: none;">Dashboard</a>
               </button>
   </li>
   
 </ul></ul>
 	</td></tr>
-	<tr>
-		<td align="center" width="50%" height="50px;">
-		</td>
-		<td  align="center" width="50%">
-		</td>
-	</tr>
-	<tr><td  align="center">
-
-<form action = '/radio' method="POST">
-	<label>What is the surname of surendra?</label><br>
-	<input type="radio" name="options1" value="a">Kotha<br>
-	<input type="radio" name="options1" value="b">kota<br>
-	<input type="radio" name="options1" value="c">kottu<br>
-	
-	<label>What is the full name of surendra?</label><br>
-	<input type="radio" name="options2" value="a">ssk<br>
-	<input type="radio" name="options2" value="b">sksk<br>
-	<input type="radio" name="options2" value="c">sskk<br>
-	<input type="submit" value=submit>
-</form>
-</td></tr></table>
+	<form action = "/auth" method = "POST">
+	<tr><td><input type="text" name="regno"></td></tr>
+	<tr><td><input type="password" name="password"></td></tr>
+	<tr><td><input type="submit" value="submit"></td></tr>
+</table>
 </body>
 </html>
