--- a/templates/ads.html
+++ b/templates/ads.html
@@ -3,6 +3,9 @@
 <head>
 	<title>ADS</title>
 	<style type="text/css">
+		body{
+		overflow-x: hidden;
+		}
 	body > #bg{
 	height: 100%;
 	width: 100%;
