--- a/templates/ds.html
+++ b/templates/ds.html
@@ -3,6 +3,10 @@
 <head>
 	<title>DATA STRUCTURES</title>
 	<style type="text/css">
+		body{
+		background-color: #1E90FF;
+		overflow-x: hidden;
+	}
 	body > #bg{
 	height: 100%;
 	width: 100%;
