--- a/templates/j1.html
+++ b/templates/j1.html
@@ -3,6 +3,11 @@
 <head>
 	<title>JAVA LAB MANUAL</title>
 	<style type="text/css">
+		body{
+
+
+		overflow-x: hidden;
+	}
 	body > #bg{
 	height: 100%;
 	width: 100%;
