--- a/templates/htm.html
+++ b/templates/htm.html
@@ -3,6 +3,9 @@
 <head>
 	<title>HTML</title>
 	<style type="text/css">
+		body{
+		overflow-x: hidden;
+	}
 	body > #bg{
 	height: 100%;
 	width: 100%;
