--- a/templates/nix1.html
+++ b/templates/nix1.html
@@ -3,6 +3,9 @@
 <head>
 	<title>UNIX LAB MANUAL</title>
 	<style type="text/css">
+		body{
+		overflow-x: hidden;
+	}
 	body > #bg{
 	height: 100%;
 	width: 100%;
