--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -38,7 +38,7 @@ body > #bg{
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
 			 <li class="nav-item">
-    <a class="nav-link" href="/" style="color: white;">Home</a>
+    <a class="nav-link" href="/" style="color: black;">Home</a>
   </li>
   <li class="nav-item">
   	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
@@ -51,7 +51,7 @@ body > #bg{
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/dashboard" style="color: white;">Dashboard</a>
+    <a class="nav-link" href="/dashboard" style="color: black;">Dashboard</a>
   </li>
    <li class="nav-item">
     <a class="nav-link" href="/logout" style="color: white;">{{btn}}</a>
