--- a/templates/home.html
+++ b/templates/home.html
@@ -459,7 +459,7 @@ function topFunction() {
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/c1" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/c+++.png')}}" height="40px" width="40px"><br><b>C++ Programming</b></a></button></div>
+				<a href = "/c1" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/c+++.png')}}" height="40px" width="40px"><br><b>C++</b></a></button></div>
 			
 		</td>
 	</tr>
@@ -473,12 +473,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/python" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/python.png')}}" height="40px" width="40px"><br><b>Python Programming</b></a></button></div>
+				<a href = "/python" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/python.png')}}" height="40px" width="40px"><br><b>Python</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/java" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/java1.png')}}" height="40px" width="40px"><br><b>Java Programming</b></a></button></div>
+				<a href = "/java" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/java1.png')}}" height="40px" width="40px"><br><b>Java</b></a></button></div>
 		</td>
 	</tr>
 <tr>
@@ -491,12 +491,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ds" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ds.png')}}" height="60px" width="60px"><br><b>Data Structures</b></a></button></div>
+				<a href = "/ds" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ds.png')}}" height="60px" width="60px"><br><b>DS</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ads" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ads.png')}}" height="40px" width="40px"><br><b>Advance Data Structures</b></a></button></div>
+				<a href = "/ads" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ads.png')}}" height="40px" width="40px"><br><b>ADS</b></a></button></div>
 		</td>
 	</tr>
 	<tr>
@@ -509,12 +509,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/htm" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/html.png')}}" height="40px" width="40px"><br><b>Web Technologies</b></a></button></div>
+				<a href = "/htm" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/html.png')}}" height="40px" width="40px"><br><b>WT</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/sql" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/sql2.png')}}" height="45px" width="45px"><br><b>SQL Programming</b></a></button></div>
+				<a href = "/sql" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/sql2.png')}}" height="45px" width="45px"><br><b>SQL</b></a></button></div>
 		</td>
 	</tr>
 <tr>
@@ -527,12 +527,12 @@ function topFunction() {
 		<td align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/ml" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ml.png')}}" height="40px" width="40px"><br><b>Unified Model Language</b></a></button></div>
+				<a href = "/ml" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/ml.png')}}" height="40px" width="40px"><br><b>UML</b></a></button></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "btn">
 			<button style="background-image: url({{url_for('static',filename = 'images/bgm1.jpg')}}); border-radius: 10px; border-color: black; height: 200px; width: 100%;font-family: 'Varela Round', sans-serif; color: black;box-shadow: -15px -12px 8px rgba(0, 0, 0, 0.4); ">
-				<a href = "/rp" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/rp.png')}}" height="40px" width="40px"><br><b>R Programming</b></a></button></div>
+				<a href = "/rp" style="color: white; text-decoration: none;"><img src = "{{url_for('static',filename = 'images/rp.png')}}" height="40px" width="40px"><br><b>RP</b></a></button></div>
 		</td>
 	</tr>
 	<tr>
