--- a/templates/home.html
+++ b/templates/home.html
@@ -367,9 +367,14 @@ function topFunction() {
 		<td colspan  = "2" align="center" width="100%" >
 			<div class = "heading">
 			<h1>Welcome to the Virtual lab of <br>AKRG CET</h1></div>
-			<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "><a href = "/signin" style="color:white; text-decoration: none; font-size: 12px;">Student Login</a></button>
-			<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "><a href = "/adminlogin" style="color: white; text-decoration: none; font-size: 12px;">Admin Login</a></button>
+			</td>
+	</tr>
+	<tr><td colspan = "2" height= "10px"></td></tr>
+	<tr>
+		<td width = "50%" align= "center" ><button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "><a href = "/signin" style="color:white; text-decoration: none; font-size: 12px;">Student Login</a></button>
+			
 		</td>
+		<td width = "50%" align = "center"><button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; "><a href = "/adminlogin" style="color: white; text-decoration: none; font-size: 12px;">Admin Login</a></button></td>
 	</tr>
 	<tr>
 		<td align="center" width="50%" height="50px;">
