--- a/templates/home.html
+++ b/templates/home.html
@@ -395,10 +395,10 @@ function topFunction() {
               </button>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/checkmarks" style="color: white;">Mid Marks</a>
+    <a class="nav-link" href="/checkmarks" style="color: black;">Mid Marks</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/dashboard" style="color: white;">Dashboard</a>
+    <a class="nav-link" href="/dashboard" style="color: black;">Dashboard</a>
   </li>
    <li class="nav-item">
     <a class="nav-link" href="/logout" style="color: white;">{{btn}}</a>
