--- a/templates/home.html
+++ b/templates/home.html
@@ -383,7 +383,7 @@ function topFunction() {
 		</td>
 	</tr>
 	<tr><td colspan="2" align="center" width="100%">
-		<ul class="nav justify-content-center" style="margin-left: 5px;">
+		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
   <li class="nav-item">
   	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
