--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Radio Buttons</title>
 	<style type="text/css">
+		@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@700&display=swap');
 	body > #bg{
 	height: 100%;
 	width: 100%;
@@ -18,9 +19,11 @@
 		height:120px;
 	}
 </style>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+
 </head>
 <body><div id = "bg"></div>
 <table width="100%" >
@@ -36,23 +39,23 @@
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
 			 <li class="nav-item">
-    <a class="nav-link" href="/" style="color: white;">Home</a>
+    <a class="nav-link" href="/" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">Home</a>
   </li>
   
 
   <li class="nav-item">
-    <a class="nav-link" href="/checkmarks" style="color: white;">Mid Marks</a>
+    <a class="nav-link" href="/checkmarks" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">Mid Marks</a>
   </li>
    <li class="nav-item">
     <button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-graph-up" viewBox="0 0 16 16">
   <path fill-rule="evenodd" d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"/>
 </svg>
-                <a href = "/dashboard" style="color: white;text-decoration: none;">Dashboard</a>
+                <a href = "/dashboard" style="color: white;font-family: 'Alegreya Sans SC', sans-serif;text-decoration: none;">Dashboard</a>
               </button>
   </li>
    <li class="nav-item">
-    <a class="nav-link" href="/logout" style="color: white;">{{btn}}</a>
+    <a class="nav-link" href="/logout" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">{{btn}}</a>
   </li>
 </ul></ul>
 	</td></tr>
