--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -6,7 +6,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 <style type="text/css">
-
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@700&display=swap');
 body > #bg{
   height: 100%;
   width: 100%;
@@ -20,6 +20,7 @@ body > #bg{
     width:80%;
     height:120px;
   }
+  
 </style>
 </head>
 <body>
@@ -38,23 +39,23 @@ body > #bg{
 		<ul class="nav justify-content-center">
 		<ul class="nav nav-pills">
 			 <li class="nav-item">
-    <a class="nav-link" href="/" style="color: black;">Home</a>
+    <a class="nav-link" href="/" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">Home</a>
   </li>
   <li class="nav-item">
   	<button type="button" class="btn btn-primary" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; ">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
-  <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"></path>
-  <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"></path>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+  <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+  <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
 </svg>
-                <a href = "/checkmarks" style="color: white;text-decoration: none;">Mid Marks</a>
+                <a href = "/checkmarks" style="color: white;font-family: 'Alegreya Sans SC', sans-serif;text-decoration: none;">Mid Marks</a>
               </button>
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/dashboard" style="color: black;">Dashboard</a>
+    <a class="nav-link" href="/dashboard" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">Dashboard</a>
   </li>
    <li class="nav-item">
-    <a class="nav-link" href="/logout" style="color: white;">{{btn}}</a>
+    <a class="nav-link" href="/logout" style="color: black;font-family: 'Alegreya Sans SC', sans-serif;">{{btn}}</a>
   </li>
 </ul></ul>
 	</td></tr>
