--- a/templates/c.html
+++ b/templates/c.html
@@ -5,8 +5,7 @@
 </head>
 <style type="text/css">
 	body{
-		background-color: #1E90FF;
-		overflow-x: hidden;
+		background-color: #37517E;
 	}
 	.logo img{
 		width:80%;
