--- a/templates/userregister.html
+++ b/templates/userregister.html
@@ -90,7 +90,7 @@ span.psw {
    
   </div>
 
-  <div class="container" style="background-color:#37517E">
+  <div class="container">
     <span class="psw">Already Have an account!! <a href="/signin">click here</a> to login.</span>
   </div>
 </form>
