--- a/templates/c.html
+++ b/templates/c.html
@@ -102,6 +102,7 @@
 }
 </style>
 <body>
+	<div id = "bg"></div>
 <table width="100%">
 	<tr>
 
@@ -127,7 +128,7 @@
 		</td>
 	</tr>
 </table>
-<h1 style="color: white;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
-<h2 style="color: white;text-align: center;">Screenshot's Must contains your code and the output!!</h2>
+<h1 style="color: black;text-align: center;">Dont Forget to Take a Screenshot after you completed your assignment</h1>
+<h2 style="color: black;text-align: center;">Screenshot's Must contains your code and the output!!</h2>
 </body>
 </html>
