--- a/templates/c.html
+++ b/templates/c.html
@@ -120,11 +120,11 @@
 <tr>
 		<td align="center" width="50%">
 			<div class = "image1">
-			<a href = "/c11" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="300px;"></a></div>
+			<a href = "/c11" target="_blank"><img src = "{{url_for('static',filename = 'images/lb.png')}}" height="300px" width="50%;"></a></div>
 		</td>
 		<td  align="center" width="50%">
 			<div class = "image2">
-			<a href = "https://www.programiz.com/c-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="300px;" ></a></div>
+			<a href = "https://www.programiz.com/c-programming/online-compiler/" target="_blank"><img src = "{{url_for('static',filename = 'images/sc.png')}}" height="300px" width="50%;" ></a></div>
 		</td>
 	</tr>
 </table>
