--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -80,7 +80,7 @@ span.psw {
 
   <div class="container">
     <label for="uname"><b>Register No</b></label>
-    <input type="text" placeholder="Enter Regd.No" name="regno" required>
+    <input type="text" placeholder="Ex: 17HK1A0---" name="regno" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" required>
