--- a/templates/userregister.html
+++ b/templates/userregister.html
@@ -78,7 +78,7 @@ span.psw {
   <div class="container">
     <h5>{{msg}}</h5><br>
     <label for="uname"><b>Register No</b></label>
-    <input type="text" placeholder="Enter Regd.No" name="regno" required>
+    <input type="text" placeholder="Ex: 17HK1A0---" name="regno" required>
 <label for="name"><b>Name of the Student</b></label>
     <input type="text" placeholder="Enter Name" name="name" required>
 
