--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Home Page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name = "description" content = "Here you can perform your Lab Works from Home!! We are providing different compilers to work on your lab assignments and to finish your programs" />
+	<meta name = "robots" content = "akrgvlcp,akrg virtual lab,akrgcetapp,akrg compilers" />
 <style type="text/css">
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
