--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -79,11 +79,22 @@ span.psw {
   </div>
 
   <div class="container">
-    <label for="uname"><b>Register No</b></label>
-    <input type="text" placeholder="Ex: 17HK1A0---" name="regno" required>
+     <label for="uname"><b>Register No</b></label>
+    <input type="text" placeholder="Ex: 17HK1A0..." name="regno" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" required>
+    <input type="checkbox" onclick="myFunction()">Show Password
+    <script>
+function myFunction() {
+  var x = document.getElementById("myInput");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
+</script>
         
     <button type="submit">Login</button>
    
