--- a/templates/attendcheck.html
+++ b/templates/attendcheck.html
@@ -136,7 +136,7 @@ body > #bg{
 		</td>
 
 	</tr>
-
+<tr><td colspan = "8" align = "center" height = "120px"><a href = "/monthattend" style="color: #F18D8D;">Check Previous Months attendence!!</a></td></tr>
 
 
 
