--- a/templates/monthattend.html
+++ b/templates/monthattend.html
@@ -50,7 +50,7 @@
     <option>Nov</option>
     <option>Dec</option>
 </select><br>
-<input type = "number" name = "year"><br>
+<input type = "number" name = "year" placeholder = "Enter Year"><br>
 <input type="submit" value="submit"></form>
 </center>
 </body>
