--- a/templates/userlogin.html
+++ b/templates/userlogin.html
@@ -83,7 +83,7 @@ span.psw {
     <input type="text" placeholder="Ex: 17HK1A0..." name="regno" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="password" required>
+    <input type="password" placeholder="Enter Password" name="password" id = "myInput" required>
     <input type="checkbox" onclick="myFunction()">Show Password
     <script>
 function myFunction() {
