--- a/templates/monthres.html
+++ b/templates/monthres.html
@@ -33,6 +33,10 @@
     <td height = "50px"><b style = "margin-left:10px;">{{j}}</b></td>
     </tr>
     {% endfor %}
-    {% endfor %}</table></center>
+    {% endfor %}
+      <tr><td align = "center">Total Absent Days</td>
+<td><b style = "margin-left:10px;">{{ac}} Days</td>
+</tr>
+      </table></center>
 </body>
 </html>
