--- a/templates/adminlogin1.html
+++ b/templates/adminlogin1.html
@@ -2,15 +2,43 @@
 <html>
 <head>
 	<title>Admin Login Page</title>
+	<style type="text/css">
+	body > #bg{
+	height: 100%;
+	width: 100%;
+	background: #37517E;
+	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
+
+	position: absolute;
+	z-index: -1;
+	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
+}
+.logo img{
+	margin-top: -80px;
+}
+.container{
+	padding-top: 100px;
+}
+</style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </head>
-<body>
-<table>
-	<center>
+<body><div id ="bg"></div>
 	<form action = "/validate" method = "POST">
-	<tr><td><input type="text" name="name"></td></tr>
-	<tr><td><input type="password" name="password"></td></tr>
-	<tr><td><input type="submit" value="submit"></td></tr>
-</form></center>
-</table>
+<table width="100%">
+	<tr>
+		<td align="center" width="100%">
+			<div class = "logo">
+			<img src = "{{url_for('static',filename = 'images/admin.png')}}" style="width: 50%; height: 120px;"></div>
+		</td>
+	</tr>
+	<div class = "container">
+	<tr><td align="center" ><input type="text" name="name" placeholder="enter email id"></td></tr>
+	<tr><td></td></tr>
+	<tr><td align="center"><input type="password" name="password" placeholder="enter password"></td></tr>
+	<tr><td align="center"><input type="submit" value="submit"></td></tr>
+</div>
+</table></form>
 </body>
 </html>
