--- a/templates/attendcheck.html
+++ b/templates/attendcheck.html
@@ -53,7 +53,7 @@ body > #bg{
   z-index: -1;
 }
 .logo img{
-    width:80%;
+    width:50%;
     height:120px;
   }
 </style>
@@ -64,7 +64,7 @@ body > #bg{
     <tr>
     <td colspan  = "8" align="center" width="100%">
       <div class = "logo">
-      <img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
+      <img src = "{{url_for('static',filename = 'images/attendence.png')}}"></div>
     </td>
   </tr>
   <tr>
