--- a/templates/checkmarks.html
+++ b/templates/checkmarks.html
@@ -17,7 +17,7 @@ body > #bg{
   z-index: -1;
 }
 .logo img{
-    width:80%;
+    width:50%;
     height:120px;
   }
   
@@ -31,7 +31,7 @@ body > #bg{
 	<tr>
 		<td colspan  = "2" align="center" width="100%">
 			<div class = "logo">
-			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}" style="width: 80%;"></div>
+			<img src = "{{url_for('static',filename = 'images/mid marks.png')}}" ></div>
 		</td>
 	</tr>
 	<tr><td height="30px;"></td></tr>
