--- a/templates/feescheck.html
+++ b/templates/feescheck.html
@@ -13,17 +13,28 @@
 </head>
 <style type="text/css">
 	.logo img{
-    width:80%;
+    width:50%;
     height:120px;
   }
+  body > #bg{
+	height: 100%;
+	width: 100%;
+	background: #37517E;
+	clip-path: polygon(0 0, 100% 0%, 100% 46%, 0 79%);
+
+	position: absolute;
+	z-index: -1;
+	box-shadow: 0px 0px 0.8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.9);
+}
 </style>
 <body>
+	<div id = "bg"></div>
 	<center>
 		<table width="100%">
     <tr>
     <td align="center" width="100%">
       <div class = "logo">
-      <img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
+      <img src = "{{url_for('static',filename = 'images/fees.png')}}" width="80%"></div>
     </td>
   </tr>
   <tr>
@@ -36,10 +47,10 @@
     <ul class="nav justify-content-center">
     <ul class="nav nav-pills">
    <li class="nav-item">
-    <a class="nav-link" href="/" style=" color: black;">Home</a>
+    <a class="nav-link" href="/" style=" color: white;">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/checkmarks" style=" color: black;">Mid Marks</a>
+    <a class="nav-link" href="/checkmarks" style=" color: white;">Mid Marks</a>
   </li>
   <li class="nav-item">
     <button type="button" class="btn btn-primary">
