--- a/templates/ress.html
+++ b/templates/ress.html
@@ -25,7 +25,7 @@
 	<tr>
 		<td colspan  = "4" align="center" width="100%">
 			<div class = "logo">
-			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}" style="width: 80%;"></div>
+			<img src = "{{url_for('static',filename = 'images/mid marks.png')}}" style="width: 50%;"></div>
 		</td>
 	</tr>
 	<tr><td height="30px;" colspan="4"></td></tr>
