--- a/templates/test1.html
+++ b/templates/test1.html
@@ -13,8 +13,9 @@
 	z-index: -1;
 }
 	.logo img{
-		width:80%;
-		height:100px;
+		width:50%;
+		height:120px;
+		margin-left: 50px;
 	}
 </style>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 	<tr>
 		<td colspan  = "2" align="center" width="100%">
 			<div class = "logo">
-			<img src = "{{url_for('static',filename = 'images/unnamed.png')}}"></div>
+			<img src = "{{url_for('static',filename = 'images/tests.png')}}"></div>
 		</td>
 	</tr>
 	<tr>
