--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -69,17 +69,17 @@
 <tr>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" onclick="document.location='/feescheck'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD;font-size: 13px; color: white;border-radius: 50px; width: 180px;">View Fees Details</button></div></td></div>
+<button type="button" class="btn btn-primary" onclick="document.location='/feescheck'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD;font-size: 13px; color: white;border-radius: 50px; width: 150px;">View Fees Details</button></div></td></div>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" onclick="document.location='/attendfirst'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD;font-size: 13px; color: white;border-radius: 50px; width: 180px;">View Attendence</button></div></td></tr>
+<button type="button" class="btn btn-primary" onclick="document.location='/attendfirst'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD;font-size: 13px; color: white;border-radius: 50px; width: 150px;">View Attendence</button></div></td></tr>
 <tr><td colspan = "2" height="20px"></td></tr>
 <tr>
 <td width="50%">
 		<div class="nav justify-content-center">
-<button type="button" class="btn btn-primary" onclick="document.location='/test1'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; font-size: 13px;color: white;border-radius: 50px; width: 180px;">Perform Tests</button></div></td>
+<button type="button" class="btn btn-primary" onclick="document.location='/test1'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; font-size: 13px;color: white;border-radius: 50px; width: 150px;">Perform Tests</button></div></td>
 <td width="50%">
 		<div class="nav justify-content-center">
-			<button type="button" class="btn btn-primary" onclick="document.location='/deleteacc'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black;font-size: 13px; background-color: #0D6EFD; color: white;border-radius: 50px; width: 180px;">Update My Account</button></div></td></tr>
+			<button type="button" class="btn btn-primary" onclick="document.location='/deleteacc'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black;font-size: 13px; background-color: #0D6EFD; color: white;border-radius: 50px; width: 150px;">Update Account</button></div></td></tr>
 </div></tr>
 	</table></body></html>
