--- a/templates/updatedetails.html
+++ b/templates/updatedetails.html
@@ -17,7 +17,7 @@
 	<input type="text" name="name" placeholder="Enter name">
 </td></tr><tr><td height="10px;"></td></tr>
 <tr><td>
-	<button type="button" class="btn btn-primary" onclick="document.location='/attendfirst'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; width: 100px; height: 40px;">Submit</button>
+	<button type="button" class="btn btn-primary" onclick="document.location='/updatedetails'" style="box-shadow: -8px -8px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border: 0px solid black; background-color: #0D6EFD; color: white;border-radius: 50px; width: 100px; height: 40px;">Submit</button>
 </td></tr>
 </form>
 </body>
