--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -79,6 +79,8 @@ background: linear-gradient(217deg, rgba(255,231,0,1) 0%, rgba(255,165,0,1) 38%,
 		<div class="nav justify-content-center">
 <button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/updatefees'">Update Fees</button></div></td></div>
 <td width="50%">
+	<div class="nav justify-content-center">
+		<button type="button" class="btn btn-primary" style="width: 100px;margin: 30px;"onclick="document.location='/sdetails'">Student Details</button></div></td></div>
 		</td></tr>
 
 </div></tr>
