--- a/templates/sresult.html
+++ b/templates/sresult.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 <body>
-
+<center>
     {% for a,b in data.items() %}  
     <h4>{{a}}</h4>
     {% for c,d in b.items() %}
     {{c}} : {{d}}<br>
     {% endfor %}
-    <p>------------------------------------------------------------------------------------------------</p>
+    <p>----------------------------------------------------</p>
     {% endfor %}
 
-    <button><a href = "{{url}}" target="_blank">Download PDF</a></button>
+    <a href = "{{url}}"  target="_blank" class="btn btn-outline-info mb-5">Download PDF</a>
+    </center>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
