--- a/templates/scheck.html
+++ b/templates/scheck.html
@@ -5,23 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Students Check</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<style>
+    
+</style>
 <body>
+    <center>
     <form method="POST", action = "/search">
-        <input type = "search" name = "q"><input type = "submit" value = "Search">
+        <div class="container mx-5">
+        <input type = "search" name = "q" class = "my-5"><input type = "submit" value = "Search" class = "btn btn-outline-info mx-4 my-5">
     {% for a,b in data.val().items() %}
     <h4>Reg Number : {{a}}</h4>    
 		{% for c in b.values() %}
 			{% for e,f in c.items() %} 
-            
-            {{e}} : {{f}}<br>
+            {% if e == "name" %}
+            <h5>{{e}} : {{f}}</h5>
+            {% else %}
+            {{e}} : {{f}}<br> {% endif %}
 				{% endfor %}
 				{% endfor %}
-                <a href = "/sedit/{{a}}">Edit</a><br><a href = "/sdelete/{{a}}">Delete</a>
+                
+                <a href = "/sedit/{{a}}" class="btn btn-primary mt-3">Edit</a><a href = "/sdelete/{{a}}" class="btn btn-danger mx-2 mt-3">Delete</a>
                 <p>--------------------------------------------------------</p>
-				{% endfor %}
+				{% endfor %}</div>
                 </form>
+                <a href = '/sinsert' class="btn btn-secondary mb-5">Insert data</a>
+                </center>
 
-            <a href = '/sinsert'>Insert data</a>
+            
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
