--- a/templates/sinsert.html
+++ b/templates/sinsert.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 <body>
-    <form action="/sinsertion" method="POST">
-        Reg Number : <input type="text" name="regno"> <br>
-        Name : <input type="text" name="name"><br>
-        Father name : <input type="text" name="father name">  <br>
-        Village name : <input type="text" name="village"> <br>
-        Transport : <input type="text" name="transport"> <br>
-        Status : <input type="text" name="status"><br>
-        <input type="submit" value="submit">
+    <center>
+
+
+    <form action="/sinsertion" method="POST" class="form">
+        Reg Number : <input type="text" name="regno" class="form-control mb-3 mt-1"> <br>
+        Name : <input type="text" name="name"  class="form-control mb-3 mt-1"><br>
+        Father name : <input type="text" name="father name"  class="form-control mb-3 mt-1">  <br>
+        Village name : <input type="text" name="village"  class="form-control mb-3 mt-1"> <br>
+        Transport : <input type="text" name="transport"  class="form-control mb-3 mt-1"> <br>
+        Status : <input type="text" name="status"  class="form-control mb-3 mt-1"><br>
+        <input type="submit" value="submit" class="btn btn-primary">
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</center>
 </body>
 </html>
