--- a/templates/sedit.html
+++ b/templates/sedit.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 <body>
-    <form action="/supdate" method="POST">
+    <center>
+    <form action="/supdate" method="POST" class="form-check-inline">
    {% for a,b in regno.val().items() %}
    {% for c,d in b.items() %}
-   {{c}}: <input type="text" value="{{d}}" name = "{{c}}"><br>
+   {{c}}: <input type="text" value="{{d}}" name = "{{c}}" class="form-control mb-3 mt-1 px-lg-5"><br>
    {% endfor %}  
    {% endfor %}
-   <input type="submit" value="submit">
+   <input type="submit" value="submit" class="btn btn-primary">
    </form>
+
+   </center>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </body>
 </html>
