--- a/templates/home.html
+++ b/templates/home.html
@@ -591,7 +591,7 @@ function topFunction() {
 
 
 <tr><td colspan="2" width="100%" align="center">
-<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">©CopyRight By CSE Students(2k17 - 2021)</footer></td></tr>
+<footer style=" color: white;font-family: candara;font-size: 20px;background-color: #031458; padding-top: 20px; padding-bottom: 20px;">Made with ♥ By K.Sudeep</footer></td></tr>
 </table><div id = "bott"></div>
 
 </body>
